--- a/index.html
+++ b/index.html
@@ -9,41 +9,43 @@
   <meta name="description" content="Restaurant Map">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-  <!-- Navbar -->
-  <nav>
-    <div class="inner">
-      <div class="nav-container">
-        <h1 class="nav-title">KFood-Map</h1>
-        <button class="nav-contact">Contact</button>
-      </div>
-    </div>
-  </nav>
-  <main>
-    <!-- Category -->
-    <section id="category">
+  <body>
+    <!-- Navbar -->
+    <nav>
       <div class="inner">
-        <div class="category-container">
-          <h2 class="category-title">
-            Choose a category for your taste
-          </h2>
-          <div class="category-list">
-            <button class="category-item">Korean</button>
-            <button class="category-item">Chinese</button>
-            <button class="category-item">Japanese</button>
-            <button class="category-item">Western</button>
-            <button class="category-item">Snack</button>
-            <button class="category-item">BBQ</button>
-            <button class="category-item">Sushi</button>
-            <button class="category-item">Etc</button>
-          </div>
+        <div class="nav-container">
+          <h1 class="nav-title">KFood-Map</h1>
+          <button class="nav-contact">Contact</button>
         </div>
       </div>
-    </section>
-    <!-- KaKao Map -->
-    <div id="map" class="inner"></div>
-  </main>
-  
-</body>
+    </nav>
+    <main>
+      <!-- Category -->
+      <section id="category">
+        <div class="inner">
+          <div class="category-container">
+            <h2 class="category-title">
+              Choose a category for your taste
+            </h2>
+            <div class="category-list">
+              <button class="category-item">Korean</button>
+              <button class="category-item">Chinese</button>
+              <button class="category-item">Japanese</button>
+              <button class="category-item">Western</button>
+              <button class="category-item">Snack</button>
+              <button class="category-item">BBQ</button>
+              <button class="category-item">Sushi</button>
+              <button class="category-item">Etc</button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- KaKao Map -->
+        <div id="map" class="inner"></div>
+    </main>
+    
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=67c1aa034ea08925165b1a01c53e22da"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
 
